added resources in README

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a{
     padding: 20px;
     outline: none;
     border: none;
-    background: #f1f7ff;
+    background: white;
     text-align: center;
 }
 .title{
