--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 .item{
     padding: 40px 20px;
 }
+.item:target tr{
+    display: table-row !important;
+}
 a{
     color: #3190FF;
 }
@@ -24,6 +27,10 @@ a{
 .title{
     display: inline;
     word-wrap:break-word;
+}
+.title a{
+    color: black;
+    text-decoration: none;
 }
 
 /* Show only the last 5 updates */
